# restaurant-booking

./: .gitignore  HOW_TO_RUN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/admin/: router.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/bookings/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/middleware/: logging.py
backend/app/notifications/: email.py
backend/app/security/: jwt.py  password.py
backend/app/tables/: models.py  repository.py  router.py  schemas.py
backend/app/users/: models.py  repository.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_bookings.py  test_tables.py
docs/: DOCKER_GUIDE.md  PHASE1_ARCHITECTURE.md  PHASE2_ARCHITECTURE.md  PHASE3_ARCHITECTURE.md  PHASE4_ARCHITECTURE.md  SWD.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  providers.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(protected)/: layout.tsx
frontend/app/(protected)/bookings/: page.tsx
frontend/app/(protected)/dashboard/: page.tsx
frontend/e2e/: booking-flow.spec.ts  conflict-prevention.spec.ts  edit-booking.spec.ts  helpers.ts  token-refresh.spec.ts
frontend/lib/: api-client.ts  auth-context.tsx  types.ts  use-admin-bookings.ts  use-bookings.ts  use-tables.ts  validators.ts
(+4 files in other folders)
